fix some styling

--- a/site/src/components/ScriptCard.astro
+++ b/site/src/components/ScriptCard.astro
@@ -32,5 +32,11 @@ const { title, description, slug, metadata } = Astro.props;
     >
       View Details
     </a>
+    <a
+      href={`/userscripts/scripts/${slug}/script.user.js`}
+      class="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
+    >
+      Download
+    </a>
   </div>
 </article>
