--- a/site/src/pages/scripts/[script]/index.astro
+++ b/site/src/pages/scripts/[script]/index.astro
@@ -1,6 +1,7 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import { getAllScripts, getScriptBySlug } from "../../utils/scripts";
+import Layout from "../../../layouts/Layout.astro";
+import { getAllScripts, getScriptBySlug } from "../../../utils/scripts";
+import { marked } from "marked";
 
 export async function getStaticPaths() {
   const scripts = await getAllScripts();
@@ -15,6 +16,11 @@ const script = await getScriptBySlug(slug!);
 if (!script) {
   return Astro.redirect("/404");
 }
+
+// FIXME: Convert markdown to html.
+// I swear Astro can do this out of the box but I couldn't get it to work.
+// lmao
+const content = await marked(script.content);
 ---
 
 <Layout title={script.title}>
@@ -28,24 +34,37 @@ if (!script) {
     </div>
 
     <div class="bg-white rounded-lg shadow-md p-6 mb-8">
-      <h2 class="text-2xl font-bold mb-4">Description</h2>
-      <div set:html={script.content} />
+      <div set:html={content} class="prose" />
+
+      <div class="flex justify-end items-center">
+        <a
+          href={`/userscripts/scripts/${script.slug}/script.user.js`}
+          class="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
+        >
+          Download
+        </a>
+      </div>
     </div>
+
+    <!-- TODO: Make more tasteful, and add a "view on github" button
 
     <div class="bg-white rounded-lg shadow-md p-6">
       <div class="flex justify-between items-center mb-4">
         <h2 class="text-2xl font-bold">Source Code</h2>
-        <button
-          class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-          onclick="navigator.clipboard.writeText(document.querySelector('pre code').textContent)"
-        >
-          Copy Code
-        </button>
+        <div class="flex gap-4">
+          <button
+            class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
+            onclick="navigator.clipboard.writeText(document.querySelector('pre code').textContent)"
+          >
+            Copy Code
+          </button>
+        </div>
       </div>
       <pre
         class="p-4 bg-gray-100 rounded overflow-x-auto">
         <code>{script.source}</code>
       </pre>
     </div>
+  -->
   </article>
 </Layout>
