--- a/site/src/components/ScriptCard.astro
+++ b/site/src/components/ScriptCard.astro
@@ -1,42 +1,47 @@
 ---
+import { marked } from "marked";
+import LinkButton from "./LinkButton.astro";
 interface Props {
   title: string;
   description: string;
+  content: string;
   slug: string;
   metadata: {
     name: string;
     version: string;
     description: string;
     author: string;
+    lastUpdated: Date;
   };
 }
 
-const { title, description, slug, metadata } = Astro.props;
+const { title, description, slug, metadata, content } = Astro.props;
+
+const contentHtml = await marked(content);
 ---
 
-<article
-  class="bg-white rounded-lg shadow-md p-6 hover:shadow-lg transition-shadow"
->
+<article class="border-2 border-current p-4 transition-colors">
   <div class="flex justify-between items-start mb-4">
-    <h2 class="text-xl font-bold">{metadata.name}</h2>
-    <span class="text-sm text-gray-500">v{metadata.version}</span>
+    <h2 class="text-lg lowercase tracking-tight">{title}</h2>
+    <span class="text-xs border border-current px-2">v{metadata.version}</span>
   </div>
 
-  <p class="text-gray-600 mb-4">{description}</p>
+  <p class="text-sm mb-4 line-clamp-2 text-gray-600 dark:text-gray-300">
+    {metadata.description}
+  </p>
 
-  <div class="flex justify-between items-center">
-    <span class="text-sm text-gray-500">by {metadata.author}</span>
-    <a
-      href={`/userscripts/scripts/${slug}`}
-      class="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-    >
-      View Details
-    </a>
-    <a
-      href={`/userscripts/scripts/${slug}/script.user.js`}
-      class="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-    >
-      Download
-    </a>
+  <div class="flex justify-between items-end text-xs">
+    <div class="flex flex-col">
+      <!-- Don't really need author, all of the scripts are by me -->
+      <!-- <span>{metadata.author}</span> -->
+      <span>v{metadata.version}</span>
+      <span>last updated: {metadata.lastUpdated.toLocaleDateString()}</span>
+    </div>
+    <div class="space-x-4">
+      <LinkButton href={`/userscripts/${slug}`}>details</LinkButton>
+      <LinkButton href={`/userscripts/${slug}/script.user.js`}
+        >install</LinkButton
+      >
+    </div>
   </div>
 </article>
