--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -14,6 +14,12 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Userscript collection" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <link
@@ -62,15 +68,6 @@ const { title } = Astro.props;
 </script>
 
 <style is:global>
-  @font-face {
-    font-family: "IBM Plex Mono";
-    src: url("https://cdnjs.cloudflare.com/ajax/libs/IBM-Plex-Mono/2.3.0/fonts/complete/woff/IBMPlexMono-Regular.woff")
-      format("woff");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-  }
-
   :root {
     font-family: "IBM Plex Mono", monospace;
   }
