--- a/site/src/components/Tag.astro
+++ b/site/src/components/Tag.astro
@@ -6,7 +6,9 @@ interface Props {
 const { name } = Astro.props;
 ---
 
-<span class="
+<span 
+  data-tag
+  class="
   px-2 py-1 text-xs rounded-full
   bg-neutral-100 dark:bg-neutral-800 
   hover:bg-neutral-200 dark:hover:bg-neutral-700
