--- a/site/src/components/ScriptCard.astro
+++ b/site/src/components/ScriptCard.astro
@@ -1,9 +1,7 @@
 ---
 import { marked } from "marked";
-import LinkButton from "./LinkButton.astro";
 import ScriptHeader from "./ScriptHeader.astro";
 import ScriptMeta from "./ScriptMeta.astro";
-import AsciiBox from "./AsciiBox.astro";
 import Tag from "./Tag.astro";
 
 interface Props {
@@ -21,12 +19,9 @@ interface Props {
   };
 }
 
-const { title, description, slug, metadata, content } = Astro.props;
-
-const contentHtml = await marked(content);
+const { title, slug, metadata} = Astro.props;
 ---
 
-<!-- <article class="border-dashed border-2 p-4 border-current transition-colors"> -->
 <article class="border-b border-black/20 dark:border-white/20 p-4 transition-colors">
   <ScriptHeader
     title={title}
@@ -44,6 +39,6 @@ const contentHtml = await marked(content);
   <ScriptMeta
     slug={slug}
     lastUpdated={metadata.lastUpdated}
-    details=true
+    details={true}
   />
 </article>
